
[package]
name = "onekey"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.35.2"
ureq = { version = "2.10", features = ["json"] }
ratatui = "0.29.0"
crossterm = "0.27"
signal-hook = "0.3"
libc = "0.2"
tempfile = "3.20.0"
rand = "0.9.1"
